--- a/QuantumultX/rewrite/Advertising.conf
+++ b/QuantumultX/rewrite/Advertising.conf
@@ -115,7 +115,7 @@ hostname = -lark-frontier-hl.snssdk.com,api.21jingji.com,service.4gtv.tv,app.58.
 ^https?:\/\/api\.caijingmobile\.com\/(ad|advert)\/ url reject
 ^https?:\/\/m\.caijing\.com\.cn\/startup_ad_ios\.html$ url reject
 # > CSDN - gw.csdn.net
-^https?:\/\/gw\.csdn\.net\/cms-app\/v\d+\/home_page\/open_advertisement url reject
+#^https?:\/\/gw\.csdn\.net\/cms-app\/v\d+\/home_page\/open_advertisement url reject
 # > Ctrip - m.ctrip.com
 ^https?:\/\/m\.ctrip\.com\/restapi\/soa2\/\d+\/json\/getAdsList url reject
 
