--- a/QuantumultX/rewrite/improvement_js.conf
+++ b/QuantumultX/rewrite/improvement_js.conf
@@ -1,4 +1,4 @@
-hostname = www.jianshu.com, mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, api.gamer.com.tw, trade-acs.m.taobao.com, api.m.jd.com, ios.prod.ftl.netflix.com, *.amemv.com,api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.zhihu.com, zhuanlan.zhihu.com, api.zhihu.com, homepage-api.smzdm.com, haojia-api.smzdm.com, article-api.smzdm.com, haojia.m.smzdm.com, app-api.smzdm.com, s-api.smzdm.com, testflight.apple.com
+hostname = www.jianshu.com, mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, api.gamer.com.tw, trade-acs.m.taobao.com, api.m.jd.com, ios.prod.ftl.netflix.com, *.amemv.com,api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.zhihu.com, zhuanlan.zhihu.com, link.zhihu.com, api.zhihu.com, homepage-api.smzdm.com, haojia-api.smzdm.com, article-api.smzdm.com, haojia.m.smzdm.com, app-api.smzdm.com, s-api.smzdm.com, testflight.apple.com
 
 #简书（by elecV2)
 // 先重写到桌面版
