--- a/QuantumultX/rewrite/improvement_js.conf
+++ b/QuantumultX/rewrite/improvement_js.conf
@@ -2,7 +2,7 @@ hostname = www.google.com, www.jianshu.com, mp.weixin.qq.com, api.bilibili.com, 
 
 
 // 去除 url 中的其他参数
-https:\/\/www\.google\.com\/(m|search).+(q=[^&]+) url script-request-header https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/simplifyurl.js
+##https:\/\/www\.google\.com\/(m|search).+(q=[^&]+) url script-request-header https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/simplifyurl.js
 // 自动翻页
 ##https:\/\/www\.google\.com\/(m|search) url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/Endless_Google.user.js
 
