--- a/QuantumultX/script/own.conf
+++ b/QuantumultX/script/own.conf
@@ -1,4 +1,4 @@
-
+hostname = api.yonekura.cn, app.flashdown365.com, appapi.neuralprisma.com, vira.llsapp.com, zebra.maka.im, www.mindmeister.com, 115.28.168.103, api.flexibits.com, avoscloud.com, license.pdfexpert.com, biz.caiyunapp.com, 
 
 #Charger Master-充电助手（20201206）
 https://api.yonekura.cn/3.6.8/uicommon/getuser url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/cdzs.js
