--- a/QuantumultX/script/own.conf
+++ b/QuantumultX/script/own.conf
@@ -1,4 +1,4 @@
-hostname = api.yonekura.cn, app.flashdown365.com, appapi.neuralprisma.com, vira.llsapp.com, zebra.maka.im, www.mindmeister.com, 115.28.168.103, api.flexibits.com, avoscloud.com, license.pdfexpert.com, biz.caiyunapp.com, 
+hostname = api.yonekura.cn, app.flashdown365.com, appapi.neuralprisma.com, vira.llsapp.com, zebra.maka.im, www.mindmeister.com, 115.28.168.103, api.flexibits.com, avoscloud.com, license.pdfexpert.com, biz.caiyunapp.com, planner5d.com, api.sololearn.com, api.revenuecat.com, api.getmimo.com, apimboom2.globaldelight.net, api.calm.com, www.calm.com, lcs-mobile-cops.adobe.io, photos.adobe.io, backend.getdrafts.com, apic.musixmatch.com, api.textnow.me, *.xunjie*.com, subs.platforms.team, vsco.co, buy.itunes.apple.com, *.xxjjappss.com, *.huaerdadi.com, 
 
 #Charger Master-充电助手（20201206）
 https://api.yonekura.cn/3.6.8/uicommon/getuser url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/cdzs.js
@@ -86,7 +86,6 @@ https://api.revenuecat.com/v1/subscribers url script-response-body https://raw.g
 
 # 小小影视 photonmang (*.xxjjappss.com,*.huaerdadi.com)
 https:\/\/.*\..*\.com\/(ssp-svr\/ssp\/list3|ucp/index|getGlobalData) url script-response-body https://raw.githubusercontent.com/photonmang/quantumultX/master/xxys.js
-
 
 
 
