--- a/QuantumultX/script/own.conf
+++ b/QuantumultX/script/own.conf
@@ -1,4 +1,22 @@
-hostname = api.yonekura.cn, app.flashdown365.com, appapi.neuralprisma.com, vira.llsapp.com, zebra.maka.im, www.mindmeister.com, 115.28.168.103, api.flexibits.com, avoscloud.com, license.pdfexpert.com, biz.caiyunapp.com, planner5d.com, api.sololearn.com, api.revenuecat.com, api.getmimo.com, apimboom2.globaldelight.net, api.calm.com, www.calm.com, lcs-mobile-cops.adobe.io, photos.adobe.io, backend.getdrafts.com, apic.musixmatch.com, api.textnow.me, *.xunjie*.com, subs.platforms.team, vsco.co, buy.itunes.apple.com, *.xxjjappss.com, *.huaerdadi.com, 
+hostname = api.busuu.com, mondly.vip.js, lambda.us-east-1.amazonaws.com, api.meiease.c*, api.memrise.com, engbright.com, api.picsart.c*, api.meiease.c*, api.yonekura.cn, app.flashdown365.com, appapi.neuralprisma.com, vira.llsapp.com, zebra.maka.im, www.mindmeister.com, 115.28.168.103, api.flexibits.com, avoscloud.com, license.pdfexpert.com, biz.caiyunapp.com, planner5d.com, api.sololearn.com, api.revenuecat.com, api.getmimo.com, apimboom2.globaldelight.net, api.calm.com, www.calm.com, lcs-mobile-cops.adobe.io, photos.adobe.io, backend.getdrafts.com, apic.musixmatch.com, api.textnow.me, *.xunjie*.com, subs.platforms.team, vsco.co, buy.itunes.apple.com, *.xxjjappss.com, *.huaerdadi.com
+
+#busuu
+^https:\/\/api\.busuu\.com\/users\/me* url script-response-body https://raw.githubusercontent.com/langkhach270389/Scripting/master/busuu.vip.js
+
+#mondly
+^https:\/\/api\.mondlylanguages\.com\/v1\/ios\/user\/sync$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Scripting/master/mondly.vip.js
+
+#drops
+^https:\/\/lambda\.us-east-1\.amazonaws\.com/.*/functions\/prod-4-syncPurchases\/invocations$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Scripting/master/drops.js
+
+#Memrise学习外语（不包括英语）
+^https:\/\/api\.memrise\.com\/.+\/(me\/$|dashboard\/$|leaderboards\/following\/) url script-response-body https://raw.githubusercontent.com/langkhach270389/Scripting/master/memrise.vip.js
+
+#Bright学习英语
+^https:\/\/engbright\.com\/app-portal\/apple\/receipt$ url 302 https://raw.githubusercontent.com/langkhach270389/Scripting/master/Bright.rsp
+
+#picsart美易
+^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/PicsArt.js
 
 #Charger Master-充电助手（20201206）
 https://api.yonekura.cn/3.6.8/uicommon/getuser url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/cdzs.js
